style: fix overflow row buttons positioning
* add missing 'left' property value for left and right button

--- a/src/components/Row/Row.module.scss
+++ b/src/components/Row/Row.module.scss
@@ -5,6 +5,7 @@
 .rowButton {
   position: absolute;
   z-index: 20;
+  left: 1rem;
   top: 50%;
   transform: translateY(-50%);
   width: 30px;
@@ -20,6 +21,7 @@
 }
 
 .rightButton {
+  left: auto;
   right: 1rem; // ! 'right' changes to this property will trigger: 'Paint', which can impact performance.webhintdetect-css-reflows/paint
 }
 
